@@ -1,7 +1,7 @@
 <?php
 /**
  * @package     Joomla.Site
- * @subpackage  com_weblinks
+ * @subpackage  com_tags
  *
  * @copyright   Copyright (C) 2005 - 2013 Open Source Matters, Inc. All rights reserved.
  * @license     GNU General Public License version 2 or later; see LICENSE.txt
@@ -17,7 +17,7 @@ defined('_JEXEC') or die;
  * @subpackage  com_tags
  * @since       3.1
  */
-abstract class TagsHelperRoute
+class TagsHelperRoute extends JHelperRoute
 {
 	protected static $lookup;
 
@@ -47,8 +47,11 @@ abstract class TagsHelperRoute
 		return $link;
 	}
 
-	public static function getTagRoute($id)
+	public function getRoute($id, $typealias = 'com_tags.tag', $link = '', $language = null, $catid = null)
 	{
+		$needles = array(
+			'tag'  => array((int) $id)
+		);
 		if ($id < 1)
 		{
 			$link = '';
@@ -73,9 +76,11 @@ abstract class TagsHelperRoute
 	{
 		$app		= JFactory::getApplication();
 		$menus		= $app->getMenu('site');
+		$language	= isset($needles['language']) ? $needles['language'] : '*';
 
 		// Prepare the reverse lookup array.
-		if (self::$lookup === null) {
+		if (self::$lookup === null)
+		{
 			self::$lookup = array();
 
 			$component	= JComponentHelper::getComponent('com_tags');
@@ -87,34 +92,53 @@ abstract class TagsHelperRoute
 					if (isset($item->query) && isset($item->query['view'])) {
 						$view = $item->query['view'];
 
-						if (!isset(self::$lookup[$view])) {
+						if (!isset(self::$lookup[$view]))
+						{
 							self::$lookup[$view] = array();
 						}
 
-						if (isset($item->query['id'])) {
-							self::$lookup[$view][$item->query['id']] = $item->id;
+						if (isset($item->query['id[0]']))
+						{
+							// Here it will become a bit tricky
+							// language != * can override existing entries
+							// language == * cannot override existing entries
+							if (!isset(self::$lookup[$language][$view][$item->query['id[0]']]) || $item->language != '*')
+							{
+								self::$lookup[$language][$view][$item->query['id[0]']] = $item->id;
+							}
+
+							self::$lookup[$view][$item->query['id[0]']] = $item->id;
+						}
+						if (isset($item->query["tag_list_language_filter"]))
+						{
+							$language = $item->query["tag_list_language_filter"];
 						}
 					}
 				}
 			}
 		}
 
-		if ($needles) {
+		if ($needles)
+		{
 			foreach ($needles as $view => $ids)
 			{
-				if (isset(self::$lookup[$view])) {
+				if (isset(self::$lookup[$view]))
+				{
 					foreach($ids as $id)
 					{
-						if (isset(self::$lookup[$view][(int) $id])) {
+						if (isset(self::$lookup[$view][(int) $id]))
+						{
 							return self::$lookup[$view][(int) $id];
 						}
 					}
 				}
 			}
 		}
-		else {
+		else
+		{
 			$active = $menus->getActive();
-			if ($active) {
+			if ($active)
+			{
 				return $active->id;
 			}
 		}
