@@ -35,9 +35,10 @@ $n = count($this->items);
 			if ((!empty($item->core_access)) && in_array($item->core_access, $this->user->getAuthorisedViewLevels())) : ?>
 				<?php if ($item->core_state == 0) : ?>
 					<li class="system-unpublished cat-list-row<?php echo $i % 2; ?>">
-				<?php else: ?><?php $r = $item->router;?>
+				<?php else: ?>
 					<li class="cat-list-row<?php echo $i % 2; ?>" >
-					<?php  echo '<h3> <a href="' . JRoute::_($item->link) . '">' . $this->escape($item->core_title) . '</a> </h3>'; ?>
+					<?php $item->route = new JHelperRoute; ?>
+					<?php  echo '<h3> <a href="' . JRoute::_($item->route->getRoute($item->content_item_id,$item->type_alias, $item->link, $item->core_language, $item->core_catid))  . '">' . $this->escape($item->core_title) . '</a> </h3>'; ?>
 					<?php endif; ?>
 					<?php  $images  = json_decode($item->core_images);?>
 					<?php if ($this->params->get('tag_list_show_item_image', 1) == 1 && !empty($images->image_intro)) :?>
