@@ -19,7 +19,9 @@ JLoader::register('TagsHelperRoute', JPATH_BASE . '/components/com_tags/helpers/
 				<?php $tagParams = new JRegistry($tag->params); ?>
 				<?php $link_class = $tagParams->get('tag_link_class', 'label label-info'); ?>
 				<span class="tag-<?php echo $tag->tag_id; ?> tag-list<?php echo $i ?>">
-					<a href="<?php echo JRoute::_(TagsHelperRoute::getTagRoute($tag->tag_id)) ?>" class="<?php echo $link_class; ?>">
+				<?php JLoader::register('TagsHelperRoute', JPATH_BASE . '/components/com_tags/helpers/route.php'); ?>
+				<?php $this->route = new TagsHelperRoute; ?>
+					<a href="<?php echo JRoute::_($this->route->getRoute($tag->tag_id . ':' . $tag->alias)) ?>" class="<?php echo $link_class; ?>">
 						<?php echo $this->escape($tag->title); ?>
 					</a>
 				</span>&nbsp;
