@@ -488,7 +488,7 @@ class JTags
 		$query->select('MAX(c.core_metadata) AS core_metadata, MAX(c.core_created_user_id) AS core_created_user_id, MAX(c.core_created_by_alias) AS core_created_by_alias');
 		$query->select('MAX(c.core_created_time) as core_created_time, MAX(c.core_images) as core_images');
 		$query->select('CASE WHEN c.core_modified_time = ' . $nullDate . ' THEN c.core_created_time ELSE c.core_modified_time END as core_modified_time');
-		$query->select('MAX(c.core_language) AS core_language');
+		$query->select('MAX(c.core_language) AS core_language, MAX(c.core_catid) AS core_catid');
 		$query->select('MAX(c.core_publish_up) AS core_publish_up, MAX(c.core_publish_down) as core_publish_down');
 		$query->select('MAX(ct.type_title) AS content_type_title, MAX(ct.router) AS router');
 
