@@ -9,11 +9,12 @@
 
 defined('_JEXEC') or die;
 ?>
+<?php JLoader::register('TagsHelperRoute', JPATH_BASE . '/components/com_tags/helpers/route.php'); ?>
 <div class="tagspopular<?php echo $moduleclass_sfx; ?>">
 <ul >
 <?php foreach ($list as $item) :	?>
-<li>
-	<a href="<?php echo JRoute::_('index.php?option=com_tags&view=tag&id=' . $item->tag_id . ':' . $item->alias); ?>">
+<li><?php $route = new TagsHelperRoute; ?>
+	<a href="<?php echo JRoute::_($route->getRoute($item->tag_id . ':' . $item->alias)); ?>">
 		<?php echo htmlspecialchars($item->title); ?></a>
 </li>
 <?php endforeach; ?>
