@@ -15,7 +15,9 @@ defined('_JEXEC') or die;
 	<ul >
 	<?php foreach ($list as $i => $item) : ?>
 		<li>
-			<a href="<?php echo JRoute::_($item->url); ?>">
+			<?php $item->route = new JHelperRoute; ?>
+
+			<a href="<?php echo JRoute::_($item->route->getRoute($item->content_item_id,$item->type_alias, $item->link, $item->core_language, $item->core_catid)); ?>">
 				<?php
 				if (!empty($item->core_title))
 				{
